# claude-md

./: .env.example  .gitignore  .mcp.json  CLAUDE copy.md  CLAUDE.md  INSTALL.md  QUICKSTART.md  README.md  UNINSTALL.md  WORKFLOW_CONFIG.md  claude.fish.example  install.ps1  install.py  install.sh  pyproject.toml  pytest.ini  requirements-test.txt  settings.json  settings.local.json.example  uninstall.py
.claude/: README.md  settings.json
.claude/commands/: check-migrations.md  dynatrace-check.md  n1-audit.md  review-pr.md
.claude/skills/django-service-layer/: SKILL.md
.claude/skills/gitlab-cicd/: SKILL.md
.claude/skills/opentelemetry-instrumentation/: SKILL.md
.claude/skills/pyspark-pipeline/: SKILL.md
.claude/skills/unity-mobile/: SKILL.md
commands/: daily-standup.md  gitlab-pipeline.md  n1-audit.md  review-pr.md  security-check.md
docs/: guia-claude-code.md
installer/: __init__.py  api_keys.py  backup.py  cli.py  files.py  mcp.py  platform.py  prereqs.py  shell_config.py  uninstall.py
skills/data-engineering/: SKILL.md
skills/gitlab-ci/: SKILL.md
skills/infisical-secrets/: SKILL.md
skills/opentelemetry/: SKILL.md
skills/python-django/: SKILL.md
skills/unity-android/: SKILL.md
skills/vue-frontend/: SKILL.md
tasks/: decisions.md  lessons.md  todo.md
tasks/archive/: README.md
tests/: FUNCIONALIDADES.md  README.md  RESULTADO.md  __init__.py  conftest.py  test_api_keys.py  test_backup_restore.py  test_cli.py  test_helpers.py  test_install_files.py  test_mcp.py  test_platform.py  test_prereqs.py  test_shell_config.py  test_uninstall.py
